--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-client": "^2.0.3",
+    "graphql-tag": "^2.5.0",
     "react": "^16.1.1",
+    "react-apollo": "^2.0.1",
     "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
