--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-client": "^2.0.3",
+    "graphcool": "^0.9.2",
     "graphql-tag": "^2.5.0",
     "react": "^16.1.1",
     "react-apollo": "^2.0.1",
